<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Airfoil Analysis</string>
    <string name="settings">Test Settings: </string>
    <string name="groundEffect">Ground effect analysis</string>
    <string name="wingTailInteraction">Wing - Tail interaction analysis</string>
    <string name="groundDetails">Ground Effects details: </string>
    <string name="wingTail">Wing - Tail interaction details: </string>
    <string name="wingTailX">Horizontal distance between the LE of Wing and Tail </string>
    <string name="wingTailY">Vertical distance between the chord of Wing and Tail </string>
    <string name="ground">Distance of the AC of the wing from ground</string>
    <string name="airfoil">Fill the fields below with the airfoil information you chose for the test. Note: if you leave a field empty, the default value will be used by the software </string>
    <string name="velocity">Velocity [m/s]</string>
    <string name="ang_of_att">Angle of attack [deg]</string>
    <string name="freestream">Fill the fields below with the flow characteristics you chose for the test. Note: if you leave a field empty, the default value will be used by the software</string>
    <string name="nacaDW">Naca designation</string>
    <string name="nacaDT">Naca designation of the tail</string>
    <string name="chord">Chord length [m] </string>
    <string name="chordT">Chord length of the tail [m] </string>
    <string name="angle">Angle of Incidence [deg] </string>
    <string name="angleT">Angle of Incidence of the tail [deg] </string>
    <string name="nPanels">Number of panels used for discretization. Min 10, Max 200</string>
    <string name="buildGem">Geometry</string>
    <string name="buildThin">Thin Airfoil Theory - Rough Approximation</string>
    <string name="cpclcd">Aerodynamic Coefficients</string>
    <string name="title_activity_cl_alpha">Cl - Alpha Plot</string>
    <string name="title_activity_geometry_build">Geometry</string>
    <string name="title_activity_build_coefficients">Aerodynamic Coefficients</string>
    <string name="title_activity_thinAirfoil">Thin Airfoil Theory Coefficient</string>
    <string name="airfoilchosen">Airfoil chosen</string>
    <string name="airfoil_geo">Airfoil</string>
    <string name="cp_upper">CP - Upper Surface</string>
    <string name="cp_lower">CP - Lower Surface</string>
    <string name="x_c">x/c</string>
    <string name="y_c">y/c</string>
    <string name="cp">CP</string>
    <string name="upper_surface">UPPER SURFACE</string>
    <string name="lower_surface">LOWER SURFACE</string>
    <string name="cl">CL, via CP integration: </string>
    <string name="cm">CM, via CP integration: </string>
    <string name="cl1">CL</string>
    <string name="cl2">CL - KJ</string>
    <string name="cl1_mirr">CL G.E.</string>
    <string name="cl2_mirr">CL - KJ G.E.</string>
    <string name="cl_zukowski">CL, via Kutta–Joukowski theorem: </string>
    <string name="cl_thwaites">CL, Thwaites correction (viscous flow): </string>
    <string name="cd_thwaites">CD, Thwaites correction (viscous flow): </string>
    <string name="angle1">Angle [°]</string>
    <string name="cl_text_thinwalled">CL estimation: </string>
    <string name="cM_text_thinwalled">CM estimation: </string>
    <string name="alfa_theodorsen">Theodorsen angle estimation: </string>
    <string name="naca45Error">Only NACA 4 and 5 digit available</string>
    <string name="naca5Error">Illegal 5-digit tail designation. First three digits must be 210, 220,…250</string>
    <string name="nPanErrorMax">Too many Panels chosen for the discretization</string>
    <string name="nPanErrorMin">Too few Panels chosen for the discretization</string>
    <string name="wing">Wing, non-dimensionalized</string>
    <string name="tail">Tail, non-dimensionalized</string>
    <string name="assembly">Wing - Tail assembly</string>
    <string name="wing1">WING</string>
    <string name="tail1">TAIL</string>
    <string name="no_ground_effect">No ground effect</string>
    <string name="ground_effect">Ground effect</string>
    <string name="info">Information</string>
    <string name="hess_smith_1"> PROVA </string>
    <string name="single_formula"> PROVA </string>
    <string name="choose_airfoil">Choose between 4 or 5 digits NACA designation:</string>
    <string name="title_activity_generate_dataset">Generate Dataset</string>
    <string name="naca4">4 digits NACA designation</string>
    <string name="naca5">5 digits NACA designation</string>
    <string name="range4">Define the range of the NACA 4 digits parameters for the dataset generation:</string>
    <string name="range5">Define the range of the NACA 5 digits parameters for the dataset generation:</string>
    <string name="minmaxcamber">Min 1° digit</string>
    <string name="maxmaxcamber">Max 1° digit</string>
    <string name="minmaxcamberpos">Min 2° digit</string>
    <string name="maxmaxcamberpos">Max 2° digit</string>
    <string name="thicknessmin">Min 3° &amp; 4° digits</string>
    <string name="thicknessmax">Max 3° &amp; 4° digits</string>
    <string name="aoamin">Min AOA [deg] </string>
    <string name="aoamax">Max AOA [deg] </string>
    <string name="desliftcoeffmin">Min 1° digit</string>
    <string name="desliftcoeffmax">Max 1° digit</string>
    <string name="camberposmin">Min 2° &amp; 3° digits</string>
    <string name="camberposmax">Max 2° &amp; 3° digits</string>
    <string name="thicknessmin5">Min 4° &amp; 5° digits</string>
    <string name="thicknessmax5">Max 4° &amp; 5° digits</string>
    <string name="gendata">Generate dataset</string>
    <string name="err1dg">Max 1° digit cannot be lower than the min</string>
    <string name="err2dg">Max 2° digit cannot be lower than the min</string>
    <string name="err34dg">You must type 2 digits in the 3° and 4° digits field</string>
    <string name="err23dglen">You must type 2 digits in the 2° and 3° digits field</string>
    <string name="err23dgval">The 2° and 3° digits field accepts only the following values: 10, 20, 30, 40, 50</string>
    <string name="err45dglen">You must type 2 digits in the 4° and 5° digits field</string>
    <string name="erraoamin">AOA min must be grater than -8.0</string>
    <string name="erraoamax">AOA max must be smaller than 8.0</string>
    <string name="aoa">AOA min must be lower than AOA max</string>
    <string name="generdata">Dataset Generation</string>
    <string name="waiting">Computation in progress. Please, wait until the end</string>
    <string name="generated">The generated dataset is available at: </string>
    <string name="speed5">Speed [m/s] </string>
    <string name="check_speed">The speed must be positive</string>
    <string name="check_comp">Max speed = 100[m/s] to avoid compressibility effects</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
