<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.aerodynamics.airfoil_calculation.BuildCoefficient"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        tools:ignore="MissingConstraints"/>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph_tail"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:layout_constraintTop_toBottomOf="@+id/graph"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="15dp"
        android:visibility="gone"/>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph_assembly"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        app:layout_constraintTop_toBottomOf="@+id/graph_tail"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="15dp"
        android:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/graph_assembly"
            android:id="@+id/all0"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/wing1"
                android:id="@+id/titolo"
                android:gravity="center_horizontal"
                android:visibility="gone"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/s1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintRight_toLeftOf="@id/d1"
                app:layout_constraintTop_toBottomOf="@id/titolo"
                tools:ignore="MissingConstraints"
                android:paddingTop="15dp">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lower_surface"
                            android:textAlignment="center" />

                    </TableRow>

                    <TableLayout
                        android:id="@+id/table"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                    </TableLayout>
                </TableLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/d1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintLeft_toRightOf="@id/s1"
                app:layout_constraintTop_toBottomOf="@id/titolo"
                tools:ignore="MissingConstraints"
                android:paddingTop="15dp"
                >

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textAlignment="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/upper_surface"
                            android:textAlignment="center" />

                    </TableRow>

                    <TableLayout
                        android:id="@+id/table1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                    </TableLayout>
                </TableLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/tail1"
                android:id="@+id/titolo1"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/d1"
                android:visibility="gone"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/s2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintTop_toBottomOf="@id/titolo1"
                app:layout_constraintRight_toLeftOf="@id/d2"
                tools:ignore="MissingConstraints"
                android:paddingTop="15dp"
                android:visibility="gone"
                >

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lower_surface"
                            android:textAlignment="center" />

                    </TableRow>

                    <TableLayout
                        android:id="@+id/table_tail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                    </TableLayout>
                </TableLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/d2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintTop_toBottomOf="@id/titolo1"
                app:layout_constraintLeft_toRightOf="@id/s2"
                tools:ignore="MissingConstraints"
                android:paddingTop="15dp"
                android:visibility="gone"
                >

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textAlignment="center">

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/upper_surface"/>

                    </TableRow>

                    <TableLayout
                        android:id="@+id/table1_tail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                    </TableLayout>
                </TableLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>